# serializer version: 1
# name: test_generate_delivery[kt_ag-set_application_ag-ech_instance_ag-ag_master_data_settings]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0097/2" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ember-ebau.localhost</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>Einfache Vorabklärung</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventBaseDelivery>
  		<ns1:planningPermissionApplicationInformation>
  			<ns1:planningPermissionApplication>
  				<ns1:planningPermissionApplicationIdentification>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2025-1</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2025-1</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:planningPermissionApplicationIdentification>
  				<ns1:description>Überbauung &quot;Westfeld&quot;</ns1:description>
  				<ns1:applicationType>Einfache Vorabklärung</ns1:applicationType>
  				<ns1:remark>Testdossier 1</ns1:remark>
  				<ns1:proceedingType>Ordentliches Verfahren</ns1:proceedingType>
  				<ns1:profilingYesNo>false</ns1:profilingYesNo>
  				<ns1:intendedPurpose>.</ns1:intendedPurpose>
  				<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  				<ns1:natureRisk>
  					<ns1:riskDesignation>Hochwasser (erhebliche Gefährdung)</ns1:riskDesignation>
  					<ns1:riskExists>true</ns1:riskExists>
  				</ns1:natureRisk>
  				<ns1:natureRisk>
  					<ns1:riskDesignation>Hochwasser (geringe Gefährdung)</ns1:riskDesignation>
  					<ns1:riskExists>true</ns1:riskExists>
  				</ns1:natureRisk>
  				<ns1:constructionCost>12000000.0</ns1:constructionCost>
  				<ns1:namedMetaData>
  					<ns3:metaDataName>status</ns3:metaDataName>
  					<ns3:metaDataValue>Pamela Horton</ns3:metaDataValue>
  				</ns1:namedMetaData>
  				<ns1:locationAddress>
  					<ns4:street>Teststrasse</ns4:street>
  					<ns4:houseNumber>12</ns4:houseNumber>
  					<ns4:town>Aarburg</ns4:town>
  					<ns4:swissZipCode>4663</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns1:locationAddress>
  				<ns1:realestateInformation>
  					<ns1:realestate>
  						<ns3:realestateIdentification>
  							<ns3:EGRID>CH270677774577</ns3:EGRID>
  							<ns3:number>1338</ns3:number>
  						</ns3:realestateIdentification>
  						<ns3:realestateType>8</ns3:realestateType>
  					</ns1:realestate>
  					<ns1:municipality>
  						<ns5:municipalityName>Aarburg</ns5:municipalityName>
  						<ns5:cantonAbbreviation>AG</ns5:cantonAbbreviation>
  					</ns1:municipality>
  					<ns1:owner>
  						<ns1:ownerAdress>
  							<ns4:person>
  								<ns4:firstName>Joseph</ns4:firstName>
  								<ns4:lastName>Foster</ns4:lastName>
  							</ns4:person>
  							<ns4:addressInformation>
  								<ns4:street>Jonathan Lakes</ns4:street>
  								<ns4:houseNumber>4209</ns4:houseNumber>
  								<ns4:town>South Austinside</ns4:town>
  								<ns4:swissZipCode>3994</ns4:swissZipCode>
  								<ns4:country>
  									<ns4:countryNameShort>CH</ns4:countryNameShort>
  								</ns4:country>
  							</ns4:addressInformation>
  						</ns1:ownerAdress>
  					</ns1:owner>
  				</ns1:realestateInformation>
  				<ns1:zone>
  					<ns1:zoneDesignation>Wohnzone 2</ns1:zoneDesignation>
  				</ns1:zone>
  				<ns1:constructionProjectInformation>
  					<ns1:constructionProject>
  						<ns3:totalCostsOfProject>12000000</ns3:totalCostsOfProject>
  						<ns3:status>6701</ns3:status>
  						<ns3:description>Überbauung &quot;Westfeld&quot;</ns3:description>
  						<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  					</ns1:constructionProject>
  					<ns1:municipality>
  						<ns5:municipalityName>Aarburg</ns5:municipalityName>
  						<ns5:cantonAbbreviation>AG</ns5:cantonAbbreviation>
  					</ns1:municipality>
  				</ns1:constructionProjectInformation>
  				<ns1:document>
  					<ns6:uuid>00000000-0000-0000-0000-000000000000</ns6:uuid>
  					<ns6:titles>
  						<ns7:title>dummy</ns7:title>
  					</ns6:titles>
  					<ns6:status>signed</ns6:status>
  					<ns6:files>
  						<ns6:file>
  							<ns6:pathFileName>unknown</ns6:pathFileName>
  							<ns6:mimeType>unknown</ns6:mimeType>
  						</ns6:file>
  					</ns6:files>
  				</ns1:document>
  			</ns1:planningPermissionApplication>
  			<ns1:relationshipToPerson>
  				<ns1:role>applicant</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:organisationIdentification>
  							<ns8:uid>
  								<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  								<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  							</ns8:uid>
  							<ns8:localOrganisationId>
  								<ns8:organisationIdCategory>unknown</ns8:organisationIdCategory>
  								<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  							</ns8:localOrganisationId>
  							<ns8:organisationName>Johnston-Jennings</ns8:organisationName>
  							<ns8:organisationAdditionalName>Christina Hamilton</ns8:organisationAdditionalName>
  							<ns8:legalForm>0223</ns8:legalForm>
  						</ns3:organisationIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>David Lodge</ns4:street>
  						<ns4:houseNumber>93939</ns4:houseNumber>
  						<ns4:town>New Whitney</ns4:town>
  						<ns4:swissZipCode>9367</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>contact</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:organisationIdentification>
  							<ns8:uid>
  								<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  								<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  							</ns8:uid>
  							<ns8:localOrganisationId>
  								<ns8:organisationIdCategory>unknown</ns8:organisationIdCategory>
  								<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  							</ns8:localOrganisationId>
  							<ns8:organisationName>Sanchez Inc</ns8:organisationName>
  							<ns8:organisationAdditionalName>Phillip Cooper</ns8:organisationAdditionalName>
  							<ns8:legalForm>0223</ns8:legalForm>
  						</ns3:organisationIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Ariana Mountains</ns4:street>
  						<ns4:houseNumber>76532</ns4:houseNumber>
  						<ns4:town>New Juliemouth</ns4:town>
  						<ns4:swissZipCode>2234</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>project author</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:organisationIdentification>
  							<ns8:uid>
  								<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  								<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  							</ns8:uid>
  							<ns8:localOrganisationId>
  								<ns8:organisationIdCategory>unknown</ns8:organisationIdCategory>
  								<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  							</ns8:localOrganisationId>
  							<ns8:organisationName>Acevedo-Rosales</ns8:organisationName>
  							<ns8:organisationAdditionalName>Joel Simon</ns8:organisationAdditionalName>
  							<ns8:legalForm>0223</ns8:legalForm>
  						</ns3:organisationIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Dickerson Island</ns4:street>
  						<ns4:houseNumber>659</ns4:houseNumber>
  						<ns4:town>Port Isabella</ns4:town>
  						<ns4:swissZipCode>8327</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>landowner</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Foster</ns9:officialName>
  							<ns9:firstName>Joseph</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Jonathan Lakes</ns4:street>
  						<ns4:houseNumber>4209</ns4:houseNumber>
  						<ns4:town>South Austinside</ns4:town>
  						<ns4:swissZipCode>3994</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:decisionAuthority>
  				<ns1:decisionAuthority>
  					<ns3:buildingAuthorityIdentificationType>
  						<ns8:uid>
  							<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  							<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  						</ns8:uid>
  						<ns8:localOrganisationId>
  							<ns8:organisationIdCategory>ebauag</ns8:organisationIdCategory>
  							<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  						</ns8:localOrganisationId>
  						<ns8:organisationName>Aarburg</ns8:organisationName>
  						<ns8:legalForm>0223</ns8:legalForm>
  					</ns3:buildingAuthorityIdentificationType>
  					<ns3:address>
  						<ns4:street>None</ns4:street>
  						<ns4:town>Sarahstad</ns4:town>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:decisionAuthority>
  			</ns1:decisionAuthority>
  			<ns1:entryOffice>
  				<ns1:entryOfficeIdentification>
  					<ns8:uid>
  						<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  						<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  					</ns8:uid>
  					<ns8:localOrganisationId>
  						<ns8:organisationIdCategory>ebauag</ns8:organisationIdCategory>
  						<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  					</ns8:localOrganisationId>
  					<ns8:organisationName>Aarburg</ns8:organisationName>
  					<ns8:legalForm>0223</ns8:legalForm>
  				</ns1:entryOfficeIdentification>
  				<ns1:municipality>
  					<ns5:municipalityName>Sarahstad</ns5:municipalityName>
  					<ns5:cantonAbbreviation>AG</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:entryOffice>
  		</ns1:planningPermissionApplicationInformation>
  	</ns1:eventBaseDelivery>
  </ns1:delivery>
  
  '''
# ---
# name: test_generate_delivery[kt_bern-set_application_be-ech_instance_be-be_master_data_settings]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0044/4" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0097/2">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.localhost</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>Einfache Vorabklärung</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventBaseDelivery>
  		<ns1:planningPermissionApplicationInformation>
  			<ns1:planningPermissionApplication>
  				<ns1:planningPermissionApplicationIdentification>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2020-1</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2020-1</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:planningPermissionApplicationIdentification>
  				<ns1:description>Testvorhaben</ns1:description>
  				<ns1:applicationType>Einfache Vorabklärung</ns1:applicationType>
  				<ns1:profilingYesNo>false</ns1:profilingYesNo>
  				<ns1:intendedPurpose>Wohnen</ns1:intendedPurpose>
  				<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  				<ns1:natureRisk>
  					<ns1:riskDesignation>Felssturz</ns1:riskDesignation>
  					<ns1:riskExists>true</ns1:riskExists>
  				</ns1:natureRisk>
  				<ns1:constructionCost>1000.0</ns1:constructionCost>
  				<ns1:namedMetaData>
  					<ns3:metaDataName>status</ns3:metaDataName>
  					<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  				</ns1:namedMetaData>
  				<ns1:locationAddress>
  					<ns4:street>Teststrasse</ns4:street>
  					<ns4:houseNumber>23b</ns4:houseNumber>
  					<ns4:town>unknown</ns4:town>
  					<ns4:swissZipCode>9999</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns1:locationAddress>
  				<ns1:realestateInformation>
  					<ns1:realestate>
  						<ns3:realestateIdentification>
  							<ns3:EGRID>CH123456789</ns3:EGRID>
  							<ns3:number>1586</ns3:number>
  						</ns3:realestateIdentification>
  						<ns3:realestateType>8</ns3:realestateType>
  						<ns3:coordinates>
  							<ns3:LV95>
  								<ns3:east>2480000.0</ns3:east>
  								<ns3:north>1070000.0</ns3:north>
  								<ns3:originOfCoordinates>904</ns3:originOfCoordinates>
  							</ns3:LV95>
  						</ns3:coordinates>
  					</ns1:realestate>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  					</ns1:municipality>
  					<ns1:buildingInformation>
  						<ns1:building>
  							<ns3:EGID>1738778</ns3:EGID>
  							<ns3:numberOfFloors>2</ns3:numberOfFloors>
  							<ns3:buildingCategory>1040</ns3:buildingCategory>
  							<ns3:civilDefenseShelter>true</ns3:civilDefenseShelter>
  						</ns1:building>
  					</ns1:buildingInformation>
  					<ns1:owner>
  						<ns1:ownerAdress>
  							<ns4:person>
  								<ns4:firstName>Testvorname</ns4:firstName>
  								<ns4:lastName>Testname</ns4:lastName>
  							</ns4:person>
  							<ns4:addressInformation>
  								<ns4:street>Teststrasse</ns4:street>
  								<ns4:houseNumber>11b</ns4:houseNumber>
  								<ns4:town>Testort</ns4:town>
  								<ns4:swissZipCode>1234</ns4:swissZipCode>
  								<ns4:country>
  									<ns4:countryNameShort>CH</ns4:countryNameShort>
  								</ns4:country>
  							</ns4:addressInformation>
  						</ns1:ownerAdress>
  					</ns1:owner>
  				</ns1:realestateInformation>
  				<ns1:zone>
  					<ns1:zoneDesignation>Testnutzungszone</ns1:zoneDesignation>
  				</ns1:zone>
  				<ns1:constructionProjectInformation>
  					<ns1:constructionProject>
  						<ns3:totalCostsOfProject>1000</ns3:totalCostsOfProject>
  						<ns3:status>6701</ns3:status>
  						<ns3:description>Testvorhaben</ns3:description>
  						<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  					</ns1:constructionProject>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  					</ns1:municipality>
  				</ns1:constructionProjectInformation>
  				<ns1:document>
  					<ns6:uuid>00000000-0000-0000-0000-000000000000</ns6:uuid>
  					<ns6:titles>
  						<ns7:title>dummy</ns7:title>
  					</ns6:titles>
  					<ns6:status>signed</ns6:status>
  					<ns6:files>
  						<ns6:file>
  							<ns6:pathFileName>unknown</ns6:pathFileName>
  							<ns6:mimeType>unknown</ns6:mimeType>
  						</ns6:file>
  					</ns6:files>
  				</ns1:document>
  			</ns1:planningPermissionApplication>
  			<ns1:relationshipToPerson>
  				<ns1:role>applicant</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns8:officialName>Testname</ns8:officialName>
  							<ns8:firstName>Testvorname</ns8:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Teststrasse</ns4:street>
  						<ns4:houseNumber>11b</ns4:houseNumber>
  						<ns4:town>Testort</ns4:town>
  						<ns4:swissZipCode>1234</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:decisionAuthority>
  				<ns1:decisionAuthority>
  					<ns3:buildingAuthorityIdentificationType>
  						<ns9:uid>
  							<ns9:uidOrganisationIdCategorie>CHE</ns9:uidOrganisationIdCategorie>
  							<ns9:uidOrganisationId>123123123</ns9:uidOrganisationId>
  						</ns9:uid>
  						<ns9:localOrganisationId>
  							<ns9:organisationIdCategory>ebaube</ns9:organisationIdCategory>
  							<ns9:organisationId><!-- ORGANISATION_ID --></ns9:organisationId>
  						</ns9:localOrganisationId>
  						<ns9:organisationName>Leitbehörde Burgdorf</ns9:organisationName>
  						<ns9:legalForm>0223</ns9:legalForm>
  					</ns3:buildingAuthorityIdentificationType>
  					<ns3:address>
  						<ns4:street>Teststrasse 23</ns4:street>
  						<ns4:town>Burgdorf</ns4:town>
  						<ns4:swissZipCode>3400</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:decisionAuthority>
  			</ns1:decisionAuthority>
  			<ns1:entryOffice>
  				<ns1:entryOfficeIdentification>
  					<ns9:uid>
  						<ns9:uidOrganisationIdCategorie>CHE</ns9:uidOrganisationIdCategorie>
  						<ns9:uidOrganisationId>123123123</ns9:uidOrganisationId>
  					</ns9:uid>
  					<ns9:localOrganisationId>
  						<ns9:organisationIdCategory>ebaube</ns9:organisationIdCategory>
  						<ns9:organisationId><!-- ORGANISATION_ID --></ns9:organisationId>
  					</ns9:localOrganisationId>
  					<ns9:organisationName>Leitbehörde Burgdorf</ns9:organisationName>
  					<ns9:legalForm>0223</ns9:legalForm>
  				</ns1:entryOfficeIdentification>
  				<ns1:municipality>
  					<ns5:municipalityName>Burgdorf</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:entryOffice>
  		</ns1:planningPermissionApplicationInformation>
  	</ns1:eventBaseDelivery>
  </ns1:delivery>
  
  '''
# ---
# name: test_generate_delivery[kt_gr-set_application_gr-ech_instance_gr-gr_master_data_settings]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0044/4" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0097/2">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ember-ebau.localhost</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>Einfache Vorabklärung</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventBaseDelivery>
  		<ns1:planningPermissionApplicationInformation>
  			<ns1:planningPermissionApplication>
  				<ns1:planningPermissionApplicationIdentification>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2020-1</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2020-1</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:planningPermissionApplicationIdentification>
  				<ns1:description>Testvorhaben</ns1:description>
  				<ns1:applicationType>Einfache Vorabklärung</ns1:applicationType>
  				<ns1:profilingYesNo>false</ns1:profilingYesNo>
  				<ns1:intendedPurpose>.</ns1:intendedPurpose>
  				<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  				<ns1:namedMetaData>
  					<ns3:metaDataName>status</ns3:metaDataName>
  					<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  				</ns1:namedMetaData>
  				<ns1:locationAddress>
  					<ns4:street>Teststrasse</ns4:street>
  					<ns4:houseNumber>12a</ns4:houseNumber>
  					<ns4:town>Chur</ns4:town>
  					<ns4:swissZipCode>1234</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns1:locationAddress>
  				<ns1:realestateInformation>
  					<ns1:realestate>
  						<ns3:realestateIdentification>
  							<ns3:EGRID>123</ns3:EGRID>
  							<ns3:number>1586</ns3:number>
  						</ns3:realestateIdentification>
  						<ns3:realestateType>8</ns3:realestateType>
  					</ns1:realestate>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>GR</ns5:cantonAbbreviation>
  					</ns1:municipality>
  					<ns1:owner>
  						<ns1:ownerAdress>
  							<ns4:person>
  								<ns4:firstName>Testvorname</ns4:firstName>
  								<ns4:lastName>Testname</ns4:lastName>
  							</ns4:person>
  							<ns4:addressInformation>
  								<ns4:street>Teststrasse</ns4:street>
  								<ns4:houseNumber>None</ns4:houseNumber>
  								<ns4:town>Testort</ns4:town>
  								<ns4:swissZipCode>1234</ns4:swissZipCode>
  								<ns4:country>
  									<ns4:countryNameShort>CH</ns4:countryNameShort>
  								</ns4:country>
  							</ns4:addressInformation>
  						</ns1:ownerAdress>
  					</ns1:owner>
  				</ns1:realestateInformation>
  				<ns1:constructionProjectInformation>
  					<ns1:constructionProject>
  						<ns3:status>6701</ns3:status>
  						<ns3:description>Testvorhaben</ns3:description>
  						<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  					</ns1:constructionProject>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>GR</ns5:cantonAbbreviation>
  					</ns1:municipality>
  				</ns1:constructionProjectInformation>
  				<ns1:document>
  					<ns6:uuid>f8380740-d73a-4683-8909-2ced929ddbc5</ns6:uuid>
  					<ns6:titles>
  						<ns7:title>Situationsplan</ns7:title>
  					</ns6:titles>
  					<ns6:status>created</ns6:status>
  					<ns6:files>
  						<ns6:file>
  							<ns6:pathFileName>http://ember-ebau.localhost/ech/v1/files/<!-- ATTACHMENT_ID --></ns6:pathFileName>
  							<ns6:mimeType>multipart/encrypted</ns6:mimeType>
  						</ns6:file>
  					</ns6:files>
  					<ns6:keywords>
  						<ns7:keyword>Amber Griffith</ns7:keyword>
  						<ns7:keyword>Grace Mitchell</ns7:keyword>
  					</ns6:keywords>
  					<ns6:documentKind>Beilagen zum Gesuch</ns6:documentKind>
  				</ns1:document>
  			</ns1:planningPermissionApplication>
  			<ns1:relationshipToPerson>
  				<ns1:role>applicant</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns8:officialName>Testname</ns8:officialName>
  							<ns8:firstName>Testvorname</ns8:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Teststrasse</ns4:street>
  						<ns4:houseNumber>None</ns4:houseNumber>
  						<ns4:town>Testort</ns4:town>
  						<ns4:swissZipCode>1234</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:decisionAuthority>
  				<ns1:decisionAuthority>
  					<ns3:buildingAuthorityIdentificationType>
  						<ns9:uid>
  							<ns9:uidOrganisationIdCategorie>CHE</ns9:uidOrganisationIdCategorie>
  							<ns9:uidOrganisationId>123123123</ns9:uidOrganisationId>
  						</ns9:uid>
  						<ns9:localOrganisationId>
  							<ns9:organisationIdCategory>ebaugr</ns9:organisationIdCategory>
  							<ns9:organisationId><!-- ORGANISATION_ID --></ns9:organisationId>
  						</ns9:localOrganisationId>
  						<ns9:organisationName>Leitbehörde Burgdorf</ns9:organisationName>
  						<ns9:legalForm>0223</ns9:legalForm>
  					</ns3:buildingAuthorityIdentificationType>
  					<ns3:address>
  						<ns4:street>Teststrasse 23</ns4:street>
  						<ns4:town>Burgdorf</ns4:town>
  						<ns4:swissZipCode>3400</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:decisionAuthority>
  			</ns1:decisionAuthority>
  			<ns1:entryOffice>
  				<ns1:entryOfficeIdentification>
  					<ns9:uid>
  						<ns9:uidOrganisationIdCategorie>CHE</ns9:uidOrganisationIdCategorie>
  						<ns9:uidOrganisationId>123123123</ns9:uidOrganisationId>
  					</ns9:uid>
  					<ns9:localOrganisationId>
  						<ns9:organisationIdCategory>ebaugr</ns9:organisationIdCategory>
  						<ns9:organisationId><!-- ORGANISATION_ID --></ns9:organisationId>
  					</ns9:localOrganisationId>
  					<ns9:organisationName>Leitbehörde Burgdorf</ns9:organisationName>
  					<ns9:legalForm>0223</ns9:legalForm>
  				</ns1:entryOfficeIdentification>
  				<ns1:municipality>
  					<ns5:municipalityName>Burgdorf</ns5:municipalityName>
  					<ns5:cantonAbbreviation>GR</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:entryOffice>
  		</ns1:planningPermissionApplicationInformation>
  	</ns1:eventBaseDelivery>
  </ns1:delivery>
  
  '''
# ---
# name: test_generate_delivery[kt_schwyz-set_application_sz-ech_instance_sz-sz_master_data_settings]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0097/2" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.localhost</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>Einfache Vorabklärung</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventBaseDelivery>
  		<ns1:planningPermissionApplicationInformation>
  			<ns1:planningPermissionApplication>
  				<ns1:planningPermissionApplicationIdentification>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>TEST-03-22-001</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>TEST-03-22-001</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:planningPermissionApplicationIdentification>
  				<ns1:description>None</ns1:description>
  				<ns1:applicationType>Thomas Lopez</ns1:applicationType>
  				<ns1:proceedingType>baubewilligung</ns1:proceedingType>
  				<ns1:profilingYesNo>false</ns1:profilingYesNo>
  				<ns1:intendedPurpose>.</ns1:intendedPurpose>
  				<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  				<ns1:namedMetaData>
  					<ns3:metaDataName>status</ns3:metaDataName>
  					<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  				</ns1:namedMetaData>
  				<ns1:locationAddress>
  					<ns4:street>unknown</ns4:street>
  					<ns4:houseNumber>0</ns4:houseNumber>
  					<ns4:town>unknown</ns4:town>
  					<ns4:swissZipCode>9999</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns1:locationAddress>
  				<ns1:realestateInformation>
  					<ns1:realestate>
  						<ns3:realestateIdentification>
  							<ns3:number>0</ns3:number>
  						</ns3:realestateIdentification>
  						<ns3:realestateType>8</ns3:realestateType>
  					</ns1:realestate>
  					<ns1:municipality>
  						<ns5:municipalityName>Elizabethburgh</ns5:municipalityName>
  						<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  					</ns1:municipality>
  					<ns1:owner>
  						<ns1:ownerAdress>
  							<ns4:person>
  								<ns4:firstName>unknown</ns4:firstName>
  								<ns4:lastName>unknown</ns4:lastName>
  							</ns4:person>
  							<ns4:addressInformation>
  								<ns4:street>unknown</ns4:street>
  								<ns4:houseNumber>0</ns4:houseNumber>
  								<ns4:town>unknown</ns4:town>
  								<ns4:swissZipCode>9999</ns4:swissZipCode>
  								<ns4:country>
  									<ns4:countryNameShort>CH</ns4:countryNameShort>
  								</ns4:country>
  							</ns4:addressInformation>
  						</ns1:ownerAdress>
  					</ns1:owner>
  				</ns1:realestateInformation>
  				<ns1:constructionProjectInformation>
  					<ns1:constructionProject>
  						<ns3:projectStartDate>2022-06-03</ns3:projectStartDate>
  						<ns3:status>6701</ns3:status>
  						<ns3:description>unknown</ns3:description>
  						<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  					</ns1:constructionProject>
  					<ns1:municipality>
  						<ns5:municipalityName>Elizabethburgh</ns5:municipalityName>
  						<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  					</ns1:municipality>
  				</ns1:constructionProjectInformation>
  				<ns1:document>
  					<ns6:uuid>12baef49-7d81-45af-910a-cfdc39ecc988</ns6:uuid>
  					<ns6:titles>
  						<ns7:title>main</ns7:title>
  					</ns6:titles>
  					<ns6:status>signed</ns6:status>
  					<ns6:files>
  						<ns6:file>
  							<ns6:pathFileName>http://ebau.localhost/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns6:pathFileName>
  							<ns6:mimeType>application/gzip</ns6:mimeType>
  						</ns6:file>
  					</ns6:files>
  					<ns6:documentKind/>
  				</ns1:document>
  				<ns1:referencedPlanningPermissionApplication>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>unknown</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>unknown</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:referencedPlanningPermissionApplication>
  			</ns1:planningPermissionApplication>
  			<ns1:relationshipToPerson>
  				<ns1:role>applicant</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:organisationIdentification>
  							<ns8:uid>
  								<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  								<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  							</ns8:uid>
  							<ns8:localOrganisationId>
  								<ns8:organisationIdCategory>unknown</ns8:organisationIdCategory>
  								<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  							</ns8:localOrganisationId>
  							<ns8:organisationName>White Group</ns8:organisationName>
  							<ns8:organisationAdditionalName>Heather Marsh</ns8:organisationAdditionalName>
  							<ns8:legalForm>0223</ns8:legalForm>
  						</ns3:organisationIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Miller Centers</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>Thomasville</ns4:town>
  						<ns4:swissZipCode>1816</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>contact</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Liu</ns9:officialName>
  							<ns9:firstName>Jessica</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Scott Ridge</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>Lake Williamchester</ns4:town>
  						<ns4:swissZipCode>5731</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>project author</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Gilbert</ns9:officialName>
  							<ns9:firstName>Crystal</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Carl Port</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>Brownstad</ns4:town>
  						<ns4:swissZipCode>9394</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>landowner</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Lloyd</ns9:officialName>
  							<ns9:firstName>Ian</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Ryan Burgs</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>East Charlesburgh</ns4:town>
  						<ns4:swissZipCode>5416</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:decisionAuthority>
  				<ns1:decisionAuthority>
  					<ns3:buildingAuthorityIdentificationType>
  						<ns8:uid>
  							<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  							<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  						</ns8:uid>
  						<ns8:localOrganisationId>
  							<ns8:organisationIdCategory>ebausz</ns8:organisationIdCategory>
  							<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  						</ns8:localOrganisationId>
  						<ns8:organisationName>Eric Ford Jr.</ns8:organisationName>
  						<ns8:legalForm>0223</ns8:legalForm>
  					</ns3:buildingAuthorityIdentificationType>
  					<ns3:address>
  						<ns4:street>None</ns4:street>
  						<ns4:town>Brandonmouth</ns4:town>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:decisionAuthority>
  			</ns1:decisionAuthority>
  			<ns1:entryOffice>
  				<ns1:entryOfficeIdentification>
  					<ns8:uid>
  						<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  						<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  					</ns8:uid>
  					<ns8:localOrganisationId>
  						<ns8:organisationIdCategory>ebausz</ns8:organisationIdCategory>
  						<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  					</ns8:localOrganisationId>
  					<ns8:organisationName>Eric Ford Jr.</ns8:organisationName>
  					<ns8:legalForm>0223</ns8:legalForm>
  				</ns1:entryOfficeIdentification>
  				<ns1:municipality>
  					<ns5:municipalityName>Brandonmouth</ns5:municipalityName>
  					<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:entryOffice>
  		</ns1:planningPermissionApplicationInformation>
  	</ns1:eventBaseDelivery>
  </ns1:delivery>
  
  '''
# ---
# name: test_generate_delivery[kt_so-set_application_so-ech_instance_so-so_master_data_settings]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0097/2" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ember-ebau.localhost</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>Einfache Vorabklärung</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventBaseDelivery>
  		<ns1:planningPermissionApplicationInformation>
  			<ns1:planningPermissionApplication>
  				<ns1:planningPermissionApplicationIdentification>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2106-2024-1</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2106-2024-1</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:planningPermissionApplicationIdentification>
  				<ns1:description>Testvorhaben</ns1:description>
  				<ns1:applicationType>Einfache Vorabklärung</ns1:applicationType>
  				<ns1:profilingYesNo>false</ns1:profilingYesNo>
  				<ns1:intendedPurpose>.</ns1:intendedPurpose>
  				<ns1:parkingLotsYesNo>true</ns1:parkingLotsYesNo>
  				<ns1:constructionCost>12000000.0</ns1:constructionCost>
  				<ns1:namedMetaData>
  					<ns3:metaDataName>status</ns3:metaDataName>
  					<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  				</ns1:namedMetaData>
  				<ns1:locationAddress>
  					<ns4:street>Musterstrasse</ns4:street>
  					<ns4:houseNumber>4</ns4:houseNumber>
  					<ns4:town>Solothurn</ns4:town>
  					<ns4:swissZipCode>4500</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns1:locationAddress>
  				<ns1:realestateInformation>
  					<ns1:realestate>
  						<ns3:realestateIdentification>
  							<ns3:EGRID>CH123456789</ns3:EGRID>
  							<ns3:number>1586</ns3:number>
  						</ns3:realestateIdentification>
  						<ns3:realestateType>8</ns3:realestateType>
  					</ns1:realestate>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>SO</ns5:cantonAbbreviation>
  					</ns1:municipality>
  					<ns1:buildingInformation>
  						<ns1:building>
  							<ns3:EGID>1234</ns3:EGID>
  							<ns3:name>Villa Rosengarten</ns3:name>
  							<ns3:buildingCategory>1020</ns3:buildingCategory>
  						</ns1:building>
  					</ns1:buildingInformation>
  					<ns1:owner>
  						<ns1:ownerAdress>
  							<ns4:person>
  								<ns4:firstName>Michael</ns4:firstName>
  								<ns4:lastName>Sims</ns4:lastName>
  							</ns4:person>
  							<ns4:addressInformation>
  								<ns4:street>Amanda Circles</ns4:street>
  								<ns4:houseNumber>81841</ns4:houseNumber>
  								<ns4:town>Port Ricky</ns4:town>
  								<ns4:swissZipCode>1644</ns4:swissZipCode>
  								<ns4:country>
  									<ns4:countryNameShort>CH</ns4:countryNameShort>
  								</ns4:country>
  							</ns4:addressInformation>
  						</ns1:ownerAdress>
  					</ns1:owner>
  				</ns1:realestateInformation>
  				<ns1:constructionProjectInformation>
  					<ns1:constructionProject>
  						<ns3:projectStartDate>2025-01-01</ns3:projectStartDate>
  						<ns3:totalCostsOfProject>12000000</ns3:totalCostsOfProject>
  						<ns3:status>6701</ns3:status>
  						<ns3:description>Testvorhaben</ns3:description>
  						<ns3:durationOfConstructionPhase>15</ns3:durationOfConstructionPhase>
  					</ns1:constructionProject>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>SO</ns5:cantonAbbreviation>
  					</ns1:municipality>
  				</ns1:constructionProjectInformation>
  				<ns1:decisionRuling>
  					<ns1:judgement>1</ns1:judgement>
  					<ns1:ruling>Zustimmung</ns1:ruling>
  					<ns1:date>2022-06-03</ns1:date>
  					<ns1:rulingAuthority>
  						<ns6:uid>
  							<ns6:uidOrganisationIdCategorie>CHE</ns6:uidOrganisationIdCategorie>
  							<ns6:uidOrganisationId>123123123</ns6:uidOrganisationId>
  						</ns6:uid>
  						<ns6:localOrganisationId>
  							<ns6:organisationIdCategory>ebauso</ns6:organisationIdCategory>
  							<ns6:organisationId><!-- ORGANISATION_ID --></ns6:organisationId>
  						</ns6:localOrganisationId>
  						<ns6:organisationName>Leitbehörde Burgdorf</ns6:organisationName>
  						<ns6:legalForm>0223</ns6:legalForm>
  					</ns1:rulingAuthority>
  				</ns1:decisionRuling>
  				<ns1:document>
  					<ns7:uuid>f8380740-d73a-4683-8909-2ced929ddbc5</ns7:uuid>
  					<ns7:titles>
  						<ns8:title>Situationsplan</ns8:title>
  					</ns7:titles>
  					<ns7:status>created</ns7:status>
  					<ns7:files>
  						<ns7:file>
  							<ns7:pathFileName>http://ember-ebau.localhost/ech/v1/files/<!-- ATTACHMENT_ID --></ns7:pathFileName>
  							<ns7:mimeType>application/font-woff</ns7:mimeType>
  						</ns7:file>
  					</ns7:files>
  					<ns7:keywords>
  						<ns8:keyword>My tag</ns8:keyword>
  					</ns7:keywords>
  					<ns7:documentKind>Beilagen zum Gesuch</ns7:documentKind>
  				</ns1:document>
  			</ns1:planningPermissionApplication>
  			<ns1:relationshipToPerson>
  				<ns1:role>applicant</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Patrick</ns9:officialName>
  							<ns9:firstName>Nicholas</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Cole Prairie</ns4:street>
  						<ns4:houseNumber>692</ns4:houseNumber>
  						<ns4:town>West Johnport</ns4:town>
  						<ns4:swissZipCode>8803</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>landowner</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Sims</ns9:officialName>
  							<ns9:firstName>Michael</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Amanda Circles</ns4:street>
  						<ns4:houseNumber>81841</ns4:houseNumber>
  						<ns4:town>Port Ricky</ns4:town>
  						<ns4:swissZipCode>1644</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:decisionAuthority>
  				<ns1:decisionAuthority>
  					<ns3:buildingAuthorityIdentificationType>
  						<ns6:uid>
  							<ns6:uidOrganisationIdCategorie>CHE</ns6:uidOrganisationIdCategorie>
  							<ns6:uidOrganisationId>123123123</ns6:uidOrganisationId>
  						</ns6:uid>
  						<ns6:localOrganisationId>
  							<ns6:organisationIdCategory>ebauso</ns6:organisationIdCategory>
  							<ns6:organisationId><!-- ORGANISATION_ID --></ns6:organisationId>
  						</ns6:localOrganisationId>
  						<ns6:organisationName>Leitbehörde Burgdorf</ns6:organisationName>
  						<ns6:legalForm>0223</ns6:legalForm>
  					</ns3:buildingAuthorityIdentificationType>
  					<ns3:address>
  						<ns4:street>Teststrasse 23</ns4:street>
  						<ns4:town>Burgdorf</ns4:town>
  						<ns4:swissZipCode>3400</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:decisionAuthority>
  			</ns1:decisionAuthority>
  			<ns1:entryOffice>
  				<ns1:entryOfficeIdentification>
  					<ns6:uid>
  						<ns6:uidOrganisationIdCategorie>CHE</ns6:uidOrganisationIdCategorie>
  						<ns6:uidOrganisationId>123123123</ns6:uidOrganisationId>
  					</ns6:uid>
  					<ns6:localOrganisationId>
  						<ns6:organisationIdCategory>ebauso</ns6:organisationIdCategory>
  						<ns6:organisationId><!-- ORGANISATION_ID --></ns6:organisationId>
  					</ns6:localOrganisationId>
  					<ns6:organisationName>Leitbehörde Burgdorf</ns6:organisationName>
  					<ns6:legalForm>0223</ns6:legalForm>
  				</ns1:entryOfficeIdentification>
  				<ns1:municipality>
  					<ns5:municipalityName>Burgdorf</ns5:municipalityName>
  					<ns5:cantonAbbreviation>SO</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:entryOffice>
  		</ns1:planningPermissionApplicationInformation>
  	</ns1:eventBaseDelivery>
  </ns1:delivery>
  
  '''
# ---
